--- a/challenge-chrome-extension/newtab/newtab.html
+++ b/challenge-chrome-extension/newtab/newtab.html
@@ -4,14 +4,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="getCurrentDateTime.js" ></script>
-    <script type="module" src="getCCFeed.js"></script>
+    <script type="module" src="getCCFeed.js" defer></script>
   </head>
   <body>
     <main class="container-md">
       <p id="current-time" class="m-3 text-center text-white fs-3 fw-bolder">Hello!</p>
       <p id="current-day" class="m-3 text-center text-white fs-5 fw-bold"></p>
       <h1 class=" text-center text-white mt-5 fw-bolder">CODING CHALLENGES>_</h1>
-      <div id="challenge-list" class="text-white ms-5">Show Something</div>
+      <div id="challenge-list" class="text-white ms-5"></div>
     </main>
   </body>
 </html>
