Implement a proxy server to bypass CORS restriction

--- a/chrome-extension/app/newtab/newtab.html
+++ b/chrome-extension/app/newtab/newtab.html
@@ -10,7 +10,7 @@
     <main class="container-md">
       <p id="current-time" class="m-3 text-center text-white fs-3 fw-bolder">Hello!</p>
       <p id="current-day" class="m-3 text-center text-white fs-5 fw-bold"></p>
-      <h1 class=" text-center text-white mt-5 fw-bolder">CODING CHALLENGES>_</h1>
+      <h1 class=" text-center text-white m-5 fw-bolder">CODING CHALLENGES>_</h1>
       <div id="challenge-list" class="text-white ms-5"></div>
     </main>
   </body>
